* Do not use header capitalization in the combo box. The  HIG says sentence capitalization
* Add a ":" to the checkbox for automatic updates. the sentence does not include the combo box

--- a/data/SoftwareProperties.glade
+++ b/data/SoftwareProperties.glade
@@ -299,7 +299,7 @@
 				<widget class="GtkCheckButton" id="checkbutton_auto_update">
 				  <property name="visible">True</property>
 				  <property name="can_focus">True</property>
-				  <property name="label" translatable="yes">Automatically check for updates</property>
+				  <property name="label" translatable="yes">Automatically check for updates:</property>
 				  <property name="use_underline">True</property>
 				  <property name="relief">GTK_RELIEF_NORMAL</property>
 				  <property name="focus_on_click">True</property>
