--- a/data/SoftwarePropertiesDialogs.glade
+++ b/data/SoftwarePropertiesDialogs.glade
@@ -92,9 +92,9 @@
 		  <signal name="toggled" handler="on_radiobutton_official_toggled" last_modification_time="Thu, 23 Feb 2006 10:03:57 GMT"/>
 
 		  <child>
-		    <widget class="GtkLabel" id="label71">
+		    <widget class="GtkLabel" id="label_dist">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Official Ubuntu Channel&lt;/b&gt;</property>
+		      <property name="label" translatable="yes"></property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -247,7 +247,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label70">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Custom Channel&lt;/b&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Custom channel&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
