--- a/data/UpdateManager.glade
+++ b/data/UpdateManager.glade
@@ -691,7 +691,7 @@
 	      <child>
 		<widget class="GtkButton" id="button1">
 		  <property name="visible">True</property>
-		  <property name="tooltip" translatable="yes">Check for new updates</property>
+		  <property name="tooltip" translatable="yes">Check for available updates</property>
 		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
