--- a/data/SoftwareProperties.glade
+++ b/data/SoftwareProperties.glade
@@ -93,6 +93,7 @@
 				  <property name="fixed_height_mode">False</property>
 				  <property name="hover_selection">False</property>
 				  <property name="hover_expand">False</property>
+				  <signal name="row_activated" handler="on_channel_activated" last_modification_time="Fri, 24 Mar 2006 12:56:00 GMT"/>
 				</widget>
 			      </child>
 			    </widget>
