--- a/data/UpdateManager.glade
+++ b/data/UpdateManager.glade
@@ -44,7 +44,7 @@
 	      <child>
 		<widget class="GtkImage" id="image4">
 		  <property name="visible">True</property>
-		  <property name="pixbuf">update-manager-logo.png</property>
+		  <property name="pixbuf">update-manager</property>
 		  <property name="xalign">0.5</property>
 		  <property name="yalign">0</property>
 		  <property name="xpad">0</property>
