--- a/data/UpdateManager.glade
+++ b/data/UpdateManager.glade
@@ -42,9 +42,8 @@
 	      <property name="spacing">12</property>
 
 	      <child>
-		<widget class="GtkImage" id="image4">
+		<widget class="GtkImage" id="image_logo">
 		  <property name="visible">True</property>
-		  <property name="pixbuf">update-manager</property>
 		  <property name="xalign">0.5</property>
 		  <property name="yalign">0</property>
 		  <property name="xpad">0</property>
