* avoid an American/British English spelling issue - fix for bug #40425

--- a/data/UpdateManager.glade
+++ b/data/UpdateManager.glade
@@ -1362,7 +1362,7 @@ Your system does not check for updates automatically. You can configure this beh
       <child>
 	<widget class="GtkLabel" id="label22">
 	  <property name="visible">True</property>
-	  <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Analysing your system&lt;/b&gt;&lt;/big&gt;
+	  <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Examining your system&lt;/b&gt;&lt;/big&gt;
 
 Software updates correct errors, eliminate security vulnerabilities and provide new features.</property>
 	  <property name="use_underline">False</property>
